Fix always wrong font path

--- a/assets/stylesheets/_weather-icons-sprockets.scss
+++ b/assets/stylesheets/_weather-icons-sprockets.scss
@@ -2,5 +2,5 @@
   @return font-path($path);
 }
 
-$fa-sass-asset-helper: true;
+$wi-sass-asset-helper: true;
 
